--- a/main.tex
+++ b/main.tex
@@ -62,8 +62,9 @@
 % \input{Sections/snap/snap}
 % \input{Sections/rep/rep}
 
+\input{Sections/consensus/consensus}
 \input{Sections/raft/raft}
-\input{Sections/crash/crash.tex}
+% \input{Sections/crash/crash.tex}
 
 \bibliographystyle{plain} % We choose the "plain" reference style
 \bibliography{refs} % Entries are in the refs.bib file
