proof reading full render, consistency models finished

--- a/Sections/raft/raft.tex
+++ b/Sections/raft/raft.tex
@@ -29,7 +29,7 @@ Now to define the parts which make up a consensus algorithm:
 
     A \textbf{Consensus Algorithm} involves the following components:
     \begin{itemize}
-        \item \textbf{Safety}: Always returns correct results in spite, network delays, partitions, duplications, and reorderings.
+        \item \textbf{Safety}: Always returns correct results in spite of, network delays, partitions, duplications, and reorderings.
         \item \textbf{Liveness}: A \textbf{Cluster} (group of servers) must tolerate a subset of server failures (e.g., A cluster of 5 servers can tolerate 2 failures). Offline 
         servers may later recover and rejoin the cluster.
         \item \textbf{Time Agnostic}: The algorithm must not rely on synchronized clocks.
