--- a/refs.bib
+++ b/refs.bib
@@ -24,3 +24,10 @@
   publisher = {USENIX Association},
   month     = jun
 }
+@misc{scylladbConsistencyModels,
+  title  = {Consistency Models Definition},
+  author = {{ScyllaDB}},
+  year   = {2025},
+  url    = {https://www.scylladb.com/glossary/consistency-models/},
+  note   = {Accessed: 2025-03-25}
+}
