--- a/refs.bib
+++ b/refs.bib
@@ -31,3 +31,12 @@
   url    = {https://www.scylladb.com/glossary/consistency-models/},
   note   = {Accessed: 2025-03-25}
 }
+
+@misc{pavlo2018occ,
+  author       = {Andy Pavlo},
+  title        = {Lecture \#04: Optimistic Concurrency Control},
+  year         = {2018},
+  howpublished = {Lecture Notes},
+  institution  = {Carnegie Mellon University},
+  url          = {https://15721.courses.cs.cmu.edu/spring2018/notes/04-occ.pdf}
+}
