--- a/main.tex
+++ b/main.tex
@@ -53,18 +53,19 @@
     \input{Sections/pre}
     
 \chapter{Introduction}
-\input{Sections/high/high}
-\input{Sections/rpc/rpc}
-\input{Sections/rpc_2/rpc_2}
-\input{Sections/time/time}
-\input{Sections/imp_rpc/imp.tex}
-\chapter{Working with Distributed Systems}
-\input{Sections/snap/snap}
-\input{Sections/rep/rep}
+% \input{Sections/high/high}
+% \input{Sections/rpc/rpc}
+% \input{Sections/rpc_2/rpc_2}
+% \input{Sections/time/time}
+% \input{Sections/imp_rpc/imp.tex}
+% \chapter{Working with Distributed Systems}
+% \input{Sections/snap/snap}
+% \input{Sections/rep/rep}
 
-\input{Sections/raft/raft}
-\input{Sections/crash/crash.tex}
-\input{Sections/consist/consist.tex}
+% \input{Sections/raft/raft}
+% \input{Sections/crash/crash.tex}
+% \input{Sections/consist/consist.tex}
+\input{Sections/trans/trans.tex}
 
 \bibliographystyle{plain} % We choose the "plain" reference style
 \bibliography{refs} % Entries are in the refs.bib file
